@@ -1,0 +1,29 @@
+<?php
+
+
+/**
+ * simple_green_theme.php
+ *    Name:   Simple-Green
+ *    Author: Paul Lesneiwski
+ *    Date:   2004/09/20
+ */
+
+global $color;
+$color[0] = "#DCDCDC"; // (light gray) R. Frame: Table Header Bar Background
+$color[1] = "#800000"; // (red) Not Currently Used (?)
+$color[2] = "#CC0000"; // (light red) Error Text
+$color[3] = "#669966"; // (p-s green) L. Frame: Background
+$color[4] = "#FFFFFF"; // (color name) R. Frame: Background
+$color[5] = "#669966"; // (p-s green) R. Frame: From/Date/Subject Header Background
+$color[6] = "#FFFFFF"; // (white) L. Frame: Normal Text
+$color[7] = "#000000"; // (black - TODO: is this OK?) R. Frame: Links
+$color[8] = "#000000"; // (black) R. Frame: Normal Text
+$color[9] = "#669966"; // (p-s green) R. Frame: Header/Footer Bar BG (usu. darker than #0)
+$color[10] = "#666666"; // (dark gray NOTE: not tested) L. Frame: Metafolder Text (usu. darker than #9)
+$color[11] = "#770000"; // (dark red - TODO: doesn't look great but needs to be different than regular folder color) L. Frame: Mailbox Folder Links (INBOX/Trash/Sent)
+$color[12] = "#EDEDED"; // (light gray) Alternate List Item Color (alternates with #4)
+$color[13] = "#800000"; // (dark red) > Quoted Message Text
+$color[14] = "#FF0000"; // (rec) >> Multi-Quoted Message Text (2 >'s or more)
+$color[15] = "#002266"; // (dark blue NOTE: not tested) L. Frame: unselectable folders
+
+?>
